--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,15 +37,15 @@ jobs:
                 CIBW_BUILD_FRONTEND: "build[uv]"
                 CIBW_BUILD: "${{ matrix.build }}${{ matrix.python }}*"
                 CIBW_ARCHS: ${{ matrix.arch }}
-                CIBW_TEST_COMMAND: |
+                CIBW_TEST_COMMAND: >
                   uv run python -c "
-import sys 
-sys.path = [p for p in sys.path if p != '']
+                      import sys;
+                      sys.path = [p for p in sys.path if p != ''];
 
-import pymoo print(pymoo)
-from pymoo.util.function_loader import is_compiled
-sys.exit(0 if is_compiled() else 1)
-"
+                      import pymoo print(pymoo);
+                      from pymoo.util.function_loader import is_compiled;
+                      sys.exit(0 if is_compiled() else 1)
+                  "
 
             - uses: actions/upload-artifact@v4
               with:
