--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,7 @@ jobs:
                   uv run python -c "
                       import sys;
                       sys.path = [p for p in sys.path if p != ''];
+                      print(sys.path);
 
                       import pymoo print(pymoo);
                       from pymoo.util.function_loader import is_compiled;
