--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
                 CIBW_BUILD: "${{ matrix.build }}${{ matrix.python }}*"
                 CIBW_ARCHS: ${{ matrix.arch }}
                 CIBW_TEST_COMMAND: >
-                  uv run python -c "import sys; sys.path = [p for p in sys.path if p != '']; print(sys.path); import pymoo; print(pymoo); from pymoo.util.function_loader import is_compiled; sys.exit(0 if is_compiled() else 1)"
+                  uv run python -c "import os; print(os.getcwd()); import sys; sys.path = [p for p in sys.path if p != '']; print(sys.path); import pymoo; print(pymoo); from pymoo.util.function_loader import is_compiled; sys.exit(0 if is_compiled() else 1)"
 
             - uses: actions/upload-artifact@v4
               with:
