--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -19,7 +19,7 @@ jobs:
           python-version: '3.10'
       - name: Install Dependencies
         run: |
-          pip install numpy Cython scipy
+          pip install setuptools>=77.0 numpy Cython scipy
           pip install -r tests/requirements.txt
       - name: Install pymoo (DEBUG)
         run: |
