Build wheels with cibuildwheel action (#698)
* shouldn't need to patch CFLAGS any more

* duplicate from mt2, restrict python versions

* start the pyproject.toml

* we should be able to build for python 3.13 too

* start thinning

* thin

* shouldn't need `wheel` now

* no linting here

* dev dependencies

* improve

* src layout

* update for src layout

* don't gitignore hypervolume.cpp

* remove executable bit

* standardise MANIFEST.in, fix for src/ layout

* tweak

* fix deprecation warnings

* cleaner

* just test importable

* pymoo doesn't support freethreaded python

* dead block

* remove maxfail

* bump lowest nump

* fast test for now

* actually, use nsga2 test

* delete old workflows

* suggest simplification

* require sufficiently recent uv

* not much luck with matplotlib, so drop 32-bit builds

* cibuildwheel only has uv 0.6.9

* move out of src/ again

* no src/

* cleanup

* back to src/ layout

* update email address

* put back

* simplify

* merge

* include lock file for reproducibility

* include the Makefile

* idea

* specify packages

* escape differently

* moo

* moo

* hmm

* single line

* debug sys.path

* we need to dedent

* dent

* maybe now?!

* blank

* give up

* better discovery

* cwd

* more

* more debug

* oops

* aha

* more minimal

* oops

* don't add lock file

* propose replacement

* don't need to change Makefile

* don't _need_ a uv bound

* recursive

* one clean, no clean-pyc

* closer

* moo

* remove unused import

* newer setuptools for testing

* newest setuptools

* pip....

* try harder

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -19,6 +19,7 @@ jobs:
           python-version: '3.10'
       - name: Install Dependencies
         run: |
+          pip install --no-cache-dir --upgrade setuptools>=77.0 
           pip install numpy Cython scipy
           pip install -r tests/requirements.txt
       - name: Install pymoo (DEBUG)
