don't include cythonized cpp files (#701)
* don't include temporary cpp files in sdist

* non recursive

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,6 @@
 exclude tests/*
-recursive-include pymoo *.pyx *.pxd
-recursive-include pymoo/cython/vendor *.cpp *.h
+exclude pymoo/cython/*.cpp
+include pymoo/cython/*.pyx 
+include pymoo/cython/*.pxd
+include pymoo/cython/vendor/*.h
 include Makefile
