Add optional dependency groups and enhanced visualization/parallelization modules
- Add comprehensive parallelization support with joblib, dask, ray, and starmap
- Add visualization enhancements with centralized matplotlib handling
- Add optional dependency groups in pyproject.toml: [visualization], [parallelization], [full]
- Update installation documentation with new optional dependency instructions

Closes #695

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,3 +57,15 @@ dev = [
     "ipython",
     "ipykernel",
 ]
+visualization = [
+    "matplotlib>=3.0",
+]
+parallelization = [
+    "joblib",
+    "dask[distributed]",
+    "ray[default]",
+]
+full = [
+    {include-group = "visualization"},
+    {include-group = "parallelization"},
+]
