--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,6 @@
 [pytest]
 markers =
-    long: tests with a longer running time.
+    long: tests with a longer running time
+    examples: example files that serve as integration tests
+    docs: documentation compilation tests
+addopts = --strict-markers
