Changing import for is_compiled

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -31,7 +31,7 @@ jobs:
           rm -rf pymoo
       - name: Check Compilation
         run: |
-          python -c "from pymoo.util.function_loader import is_compiled;print('Compiled Extensions: ', is_compiled())"
+          python -c "from pymoo.functions import is_compiled;print('Compiled Extensions: ', is_compiled())"
       - name: Run Tests
         run: |
-          pytest -v --maxfail 1 --no-header -m "not long"
+          pytest -v --no-header -m "not long"
