--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,7 +67,7 @@ jobs:
                 CIBW_BUILD: "${{ matrix.build }}${{ matrix.python }}*"
                 CIBW_ARCHS: ${{ matrix.arch }}
                 CIBW_TEST_COMMAND: >
-                  uv run python -c "import sys; import pymoo; print(pymoo); from pymoo.util.function_loader import is_compiled; sys.exit(0 if is_compiled() else 42)"
+                  uv run python -c "import sys; import pymoo; print(pymoo); from pymoo.functions import is_compiled; sys.exit(0 if is_compiled() else 42)"
 
             - uses: actions/upload-artifact@v4
               with:
