Fix object parameter shadowing in Meta classes
- Renamed 'object' parameter to avoid shadowing Python's built-in object type
- Fixed Meta.__init__ to use 'wrapped_object' parameter
- Fixed Meta.__setattr__ to use super().__setattr__ instead of object.__setattr__
- Fixed AutomaticDifferentiation.__init__ parameter name
- Fixed ComplexNumberGradient.__init__ parameter name
- Resolves TypeError: can't apply this __setattr__ to AutomaticDifferentiation object

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ __pycache__/
  **/*.ipynb_checkpoints/
 
 
+
 # files which are in pytest
 tests/!archive/*
 tests/scratch*
@@ -46,8 +47,9 @@ benchmark/runs/*
 # any video or other output file
 *.mp4
 
-# pycharm folder
+
 .idea/
+.kiro/
 
 
 # Distribution / packaging
