oops wrong name

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,7 @@ jobs:
             # Ensure that a wheel builder finishes even if another fails
             fail-fast: false
             matrix:
-                os: [windows-latest, ubuntu-latest, ubuntu-24.04-arm64, macos-latest]
+                os: [windows-latest, ubuntu-latest, ubuntu-24.04-arm, macos-latest]
                 python: [310, 311, 312, 313, 314]
                 arch: [auto64, universal2]
                 build: ["cp"]
